    UI offers to block malicious hosts that haven't blocked already.
  * Policy update, Incomplete files are not shared by default to avoid
    sharing files you started downloading and didn't want.
  * Policy update, Finished downloads are not shared by default to
    avoid confusion between files on Shared folder versus files
    on Save folder.
  * UX improvement, better explanation and option to turn on/off
    individual sharing of finished downloads (that end up in Saved
    Folder) during FrostWire setup wizard.
  * UX improvement, when user turns off Finished Download sharing
    those files that were shared as individual files inside
    the 'Saved Folder' will not be shared anymore.
  * UX improvement, File menu now has option to Exit FrostWire completely.
  * UX improvement, File menu now says "Open Torrent/Magnet" instead
    of "Download Torrent/Magnet" for clarity.
  * Bug Fix: The Torrent Save folder is now considered correctly,
    now users can set a Torrent Save folder on external drives.    
	
 -- FrostWire Team <contact@frostwire.com>  Thu, 5 May 2011 11:03:14 -0500

frostwire (4.21.5) stable; urgency=high

  * Fixes newly introduced bug where it would not recursively share the 
    files in a folder. Thanks File_Girl71.
  * Fixes newly introduced bug where it wouldn't correctly display the 
    title of a file on the Playlist.
  * Fixes issue where it would not kill torrent uploads until 
    the next restart.
  * Fixes NPE on HttpFetcher.fetch()
	
 -- FrostWire Team <contact@frostwire.com>  Mon, 21 Mar 2011 19:33:12 -0500

frostwire (4.21.4) stable; urgency=low

  * New setting to turn off automatic installer downloads.
  * New setting to limit the speed of BitTorrent downloads.
  * New Galician flag added.
  * UX improvements when creating new folders on the Phones and Tablets UI.
  * Fixes bug when dropping files on an Android device that hasn't been 
    selected.
  * UX change. FrostWire will now seed torrents that have not been removed